--- a/index-sign-in.html
+++ b/index-sign-in.html
@@ -17,7 +17,7 @@
 <body>
 
     <div class="photo">
-        <img src="Assets/Images/PHSM Logo_black-01.PNG" alt="">
+        <img src="Assets/Images/campus (1).png" alt="">
     </div>
     <div class="login">
         <h1>Log In</h1>
@@ -27,7 +27,7 @@
                 <input type="text" id="username" placeholder="Username" required>
                 <input type="text" id="password" placeholder="Password" required>
                 <!-- <button type="submit">Submit</button> -->
-                <div class="container">
+                <div class="container1">
                     <a class="btn btn-1" target="_blank">GO</a>
                   </div>
             </div>
