--- a/index-sign-in.html
+++ b/index-sign-in.html
@@ -25,7 +25,7 @@
         <div class="container">
             <div class="content">
                 <input type="text" id="username" placeholder="Username" required>
-                <input type="text" id="password" placeholder="Password" required>
+                <input type="password" id="password" placeholder="Password" required>
                 <!-- <button type="submit">Submit</button> -->
                 <div class="container1">
                     <a class="btn btn-1" target="_blank">GO</a>
